--- a/src/package.json
+++ b/src/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "solid-chess",
+  "name": "solid-chat",
   "version": "0.2.0",
-  "description": "A Solid-based chess game",
+  "description": "A Solid-based chat",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -13,14 +13,13 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/pheyvaer/solid-chess.git"
+    "url": "git+https://github.com/Arquisoft/dechat_es3b.git"
   },
-  "author": "Pieter Heyvaert <pheyvaer.heyvaert@ugent.be>",
-  "license": "MIT",
+  "author": "DeChat_es3B",
   "bugs": {
-    "url": "https://github.com/pheyvaer/solid-chess/issues"
+    "url": "https://github.com/Arquisoft/dechat_es3b/issues"
   },
-  "homepage": "https://github.com/pheyvaer/solid-chess#readme",
+  "homepage": "https://github.com/Arquisoft/dechat_es3b",
   "devDependencies": {
     "@11ty/eleventy": "^0.6.0",
     "jsdoc": "^3.5.5",
@@ -32,13 +31,11 @@
     "@comunica/actor-init-sparql-rdfjs": "1.4.2",
     "@solid/cli": "^0.1.0",
     "@solid/query-ldflex": "^1.2.1",
-    "chess.js": "jhlywa/chess.js#master",
     "date-fns": "^2.0.0-alpha.25",
     "inquirer": "^6.2.0",
     "n3": "^1.0.2",
     "prefix-ns": "^0.1.2",
     "q": "^1.5.1",
-    "semantic-chess": "0.2.0",
     "solid-auth-client": "^2.2.10",
     "streamify-array": "^1.0.1",
     "uniqid": "^5.0.3",
