--- a/package.json
+++ b/package.json
@@ -1,49 +1,58 @@
 {
   "name": "dechat_es3b",
-  "version": "1.0.0",
-  "description": "Simple chat using solid server",
-  "main": "server.js",
-  "dependencies": {
-    "@babel/core": "^7.3.4",
-    "@babel/register": "^7.0.0",
-    "@solid/query-ldflex": "^2.4.0",
-    "coveralls": "^3.0.3",
-    "dependencies": "0.0.1",
-    "express": "^4.16.4",
-    "gulp": "^4.0.0",
-    "linq": "^3.1.1",
-    "node-web-streams": "^0.2.2",
-    "solid-auth-client": "^2.2.14",
-    "solid-file-client": "^0.4.9",
-    "standard": "^12.0.1",
-    "web-streams-polyfill": "^1.3.2"
-  },
-  "devDependencies": {
-    "asciidoctor.js": "^1.5.9",
-    "asciidoctor-cli": "^1.5.6-rc.1",
-    "codacy-coverage": "^3.4.0",
-    "jest": "^24.3.0",
-    "webpack": "^4.29.6",
-    "webpack-cli": "^3.2.3"
-  },
+  "version": "0.0.1",
+  "description": "Decentralized, solid-based chat",
+  "main": "index.js",
   "scripts": {
-    "test": "jest",
-    "coverage": "jest --coverage && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage",
-    "build": "webpack && npm start",
-    "test-coverage": "jest --coverage && cat ./coverage/lcov.info | codacy-coverage && rm -rf ./coverage",
-    "docs": "./node_modules/.bin/asciidoctorjs src/adocs/index.adoc -a toc=left --destination-dir docs"
+    "start": "webpack && node loader.js",
+    "test": "mocha \"./test/*\"",
+    "build:web": "webpack --config webpack.config.js",
+    "doc": "./node_modules/.bin/jsdoc -c jsdoc.json ./lib"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Arquisoft/dechat_es3b.git"
+    "url": "git+https://github.com/Arquisoft/dechat_es3b"
   },
-  "author": "ES3B",
-  "license": "MIT",
+  "author": "Yago García Rodríguez <UO257178@uniovi.es>",
   "bugs": {
     "url": "https://github.com/Arquisoft/dechat_es3b/issues"
   },
-  "homepage": "https://github.com/Arquisoft/dechat_es3b#readme",
-  "directories": {
-    "test": "test"
+  "homepage": "https://github.com/Arquisoft/dechat_es3b/blob/master/readme.adoc",
+  "devDependencies": {
+    "@babel/cli": "^7.2.3",
+    "@babel/core": "^7.2.2",
+    "@babel/node": "^7.2.2",
+    "@babel/preset-env": "^7.3.1",
+    "asciidoctor-cli": "^1.5.6-rc.1",
+    "asciidoctor.js": "^1.5.9",
+    "@babel/register": "^7.0.0",
+    "@11ty/eleventy": "^0.7.1",
+    "jsdoc": "^3.5.5",
+    "minami": "^1.2.3",
+    "webpack": "^4.23.1",
+    "webpack-cli": "^3.1.2"
+  },
+  "dependencies": {
+    "@comunica/actor-init-sparql-rdfjs": "1.4.2",
+    "@solid/cli": "^0.1.0",
+    "@solid/query-ldflex": "^1.1.1",
+    "date-fns": "^2.0.0-alpha.25",
+    "express": "^4.16.4",
+    "inquirer": "^6.2.0",
+    "n3": "^1.0.2",
+    "prefix-ns": "^0.1.2",
+    "chai": "4.2.x",
+    "q": "^1.5.1",
+    "mocha": "^5.2.0",
+    "mocha-lcov-reporter": "^1.3.0",
+    "semantic-chess": "0.2.0",
+    "solid-auth-client": "^2.2.10",
+    "solid-file-client": "^0.4.9",
+    "streamify-array": "^1.0.1",
+    "uniqid": "^5.0.3",
+    "uri-js": "^4.2.2",
+    "winston": "^3.1.0",
+    "nyc": "^13.3.0",
+    "standard": "*"
   }
 }
