--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,6 @@
-language: java
-sudo: false # faster builds
-jdk:
-- oraclejdk8
-cache: npm
-script: "npm test"
-after_success:
-  - bash <(curl -s https://codecov.io/bash)
+language: node_js
+node_js:
+- "stable"
+after_success: 
+npm run coverage
+- bash <(curl -s https://codecov.io/bash)
