--- a/package.json
+++ b/package.json
@@ -8,6 +8,18 @@
     "build:web": "webpack --config webpack.config.js",
     "doc": "./node_modules/.bin/jsdoc -c jsdoc.json ./lib"
   },
+  "scripts": {
+    "test": "karma start karma.conf.js"
+  },
+  "devDependencies": {
+    "browserify": "^16.2.2",
+    "chai": "^4.1.2",
+    "karma": "^2.0.5",
+    "karma-browserify": "^5.3.0",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-mocha": "^1.3.0",
+    "mocha": "^5.2.0"
+  },
   "bin": {
     "solid-chess": "bin/cli.js"
   },
@@ -45,4 +57,5 @@
     "uri-js": "^4.2.2",
     "winston": "^3.1.0"
   }
+
 }
