--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack --config webpack.config.js && http-server -c-1 -p 8080",
-    "test": "echo \"Error: no test specified\" && exit 1",
+     "test": "mocha \"./test/*\"",
     "build:web": "webpack --config webpack.config.js",
     "doc": "./node_modules/.bin/jsdoc -c jsdoc.json ./lib"
   },
