--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "n3": "^1.0.2",
     "prefix-ns": "^0.1.2",
     "q": "^1.5.1",
+    "mocha": "^5.2.0",
+    "mocha-lcov-reporter": "^1.3.0",
     "semantic-chess": "0.2.0",
     "solid-auth-client": "^2.2.10",
     "streamify-array": "^1.0.1",
