--- a/package.json
+++ b/package.json
@@ -23,7 +23,14 @@
   },
   "homepage": "https://github.com/pheyvaer/solid-chess#readme",
   "devDependencies": {
-    "@11ty/eleventy": "^0.6.0",
+    "@babel/cli": "^7.2.3",
+    "@babel/core": "^7.2.2",
+    "@babel/node": "^7.2.2",
+    "@babel/preset-env": "^7.3.1",
+    "asciidoctor-cli": "^1.5.6-rc.1",
+    "asciidoctor.js": "^1.5.9",
+    "@babel/register": "^7.0.0",
+    "@11ty/eleventy": "^0.7.1",
     "jsdoc": "^3.5.5",
     "minami": "^1.2.3",
     "webpack": "^4.23.1",
@@ -39,6 +46,7 @@
     "n3": "^1.0.2",
     "prefix-ns": "^0.1.2",
     "q": "^1.5.1",
+    "chai": "4.2.x",
     "mocha": "^5.2.0",
     "mocha-lcov-reporter": "^1.3.0",
     "semantic-chess": "0.2.0",
@@ -46,6 +54,8 @@
     "streamify-array": "^1.0.1",
     "uniqid": "^5.0.3",
     "uri-js": "^4.2.2",
-    "winston": "^3.1.0"
+    "winston": "^3.1.0",
+    "nyc": "^13.3.0",
+    "standard": "*"
   }
 }
