--- a/package.json
+++ b/package.json
@@ -6,15 +6,16 @@
   "scripts": {
     "start": "webpack --config webpack.config.js && http-server -c-1 -p 8080",
     "test": "mocha \"./test/*\"",
+    "cucumber":"cucumber-js",
     "build:web": "webpack --config webpack.config.js",
-    "doc": "./node_modules/.bin/jsdoc -c jsdoc.json ./lib"
+    "doc": "jsdoc -c jsdoc.json ./lib"
   },
   "bin": {
     "solid-chess": "bin/cli.js"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Arquisoft/dechat_es3b"
+    "url": "git+https://github.com/Arquisoft/dechat_es3b.git"
   },
   "author": "DeChatES3B",
   "license": "MIT",
@@ -23,14 +24,15 @@
   },
   "homepage": "https://github.com/Arquisoft/dechat_es3b#readme",
   "devDependencies": {
+    "@11ty/eleventy": "^0.7.1",
     "@babel/cli": "^7.2.3",
     "@babel/core": "^7.2.2",
     "@babel/node": "^7.2.2",
     "@babel/preset-env": "^7.3.1",
+    "@babel/register": "^7.0.0",
     "asciidoctor-cli": "^1.5.6-rc.1",
     "asciidoctor.js": "^1.5.9",
-    "@babel/register": "^7.0.0",
-    "@11ty/eleventy": "^0.7.1",
+    "cucumber": "^5.1.0",
     "jsdoc": "^3.5.5",
     "minami": "^1.2.3",
     "webpack": "^4.23.1",
@@ -40,7 +42,7 @@
     "@comunica/actor-init-sparql-rdfjs": "^1.6.5",
     "@solid/cli": "^0.1.0",
     "@solid/query-ldflex": "^1.2.1",
-    "chess.js": "jhlywa/chess.js#master",
+    "chess.js": "github:jhlywa/chess.js#master",
     "date-fns": "^2.0.0-alpha.25",
     "inquirer": "^6.2.0",
     "n3": "^1.0.2",
@@ -57,5 +59,11 @@
     "winston": "^3.1.0",
     "nyc": "^13.3.0",
     "standard": "*"
-  }
+  },
+  "directories": {
+    "doc": "docs",
+    "lib": "lib",
+    "test": "test"
+  },
+  "keywords": []
 }
