--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "webpack --config webpack.config.js && http-server -c-1 -p 8080",
     "test": "mocha \"./test/*\"",
     "cucumber": "cucumber-js",
-    "coverage": "nyc report --reporter=text-lcov > coverage.lcov && codecov",
+    "coverage": "nyc report --reporter=text-lcov | coveralls",
     "build:web": "webpack --config webpack.config.js",
     "doc": "jsdoc -c jsdoc.json ./lib"
   },
@@ -51,6 +51,7 @@
     "prefix-ns": "^0.1.2",
     "q": "^1.5.1",
     "chai": "4.2.x",
+    "coveralls": "^3.0.3",
     "mocha": "^5.2.0",
     "mocha-lcov-reporter": "^1.3.0",
     "semantic-chess": "0.2.0",
