--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "webpack --config webpack.config.js && http-server -c-1 -p 8080",
     "test": "nyc mocha \"./test/*\"",
-    "cucumber": "cucumber-js",
+    "cucumber": "node ./node_modules/selenium-cucumber-js/index.js -b firefox -s ./features/step_definitions -x 50000",
     "coverage": "nyc report --reporter=text-lcov > coverage.lcov && codecov",
     "build:web": "webpack --config webpack.config.js",
     "doc": "jsdoc -c jsdoc.json ./lib"
@@ -45,22 +45,24 @@
     "@comunica/actor-init-sparql-rdfjs": "^1.6.5",
     "@solid/cli": "^0.1.0",
     "@solid/query-ldflex": "^1.2.1",
+    "chai": "4.2.x",
     "chess.js": "github:jhlywa/chess.js#master",
     "date-fns": "^2.0.0-alpha.25",
     "inquirer": "^6.2.0",
+    "mocha": "^5.2.0",
+    "mocha-lcov-reporter": "^1.3.0",
     "n3": "^1.0.2",
     "prefix-ns": "^0.1.2",
     "q": "^1.5.1",
-    "chai": "4.2.x",
-    "mocha": "^5.2.0",
-    "mocha-lcov-reporter": "^1.3.0",
+    "selenium-cucumber-js": "^1.6.2",
+    "selenium-webdriver": "^4.0.0-alpha.1",
     "semantic-chess": "0.2.0",
     "solid-auth-client": "^2.2.10",
+    "standard": "*",
     "streamify-array": "^1.0.1",
     "uniqid": "^5.0.3",
     "uri-js": "^4.2.2",
-    "winston": "^3.1.0",
-    "standard": "*"
+    "winston": "^3.1.0"
   },
   "directories": {
     "doc": "docs",
