--- a/package.json
+++ b/package.json
@@ -38,29 +38,31 @@
     "jsdoc": "^3.5.5",
     "minami": "^1.2.3",
     "nyc": "^13.3.0",
-    "webpack": "^4.23.1",
+    "webpack": "^4.29.6",
     "webpack-cli": "^3.1.2"
   },
   "dependencies": {
     "@comunica/actor-init-sparql-rdfjs": "^1.6.5",
     "@solid/cli": "^0.1.0",
     "@solid/query-ldflex": "^1.2.1",
+    "chai": "4.2.x",
     "chess.js": "github:jhlywa/chess.js#master",
     "date-fns": "^2.0.0-alpha.25",
+    "http-server": "^0.11.1",
     "inquirer": "^6.2.0",
+    "mocha": "^5.2.0",
+    "mocha-lcov-reporter": "^1.3.0",
     "n3": "^1.0.2",
     "prefix-ns": "^0.1.2",
     "q": "^1.5.1",
-    "chai": "4.2.x",
-    "mocha": "^5.2.0",
-    "mocha-lcov-reporter": "^1.3.0",
     "semantic-chess": "0.2.0",
     "solid-auth-client": "^2.2.10",
+    "solid-file-client": "^0.4.9",
+    "standard": "*",
     "streamify-array": "^1.0.1",
     "uniqid": "^5.0.3",
     "uri-js": "^4.2.2",
-    "winston": "^3.1.0",
-    "standard": "*"
+    "winston": "^3.1.0"
   },
   "directories": {
     "doc": "docs",
