--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "webpack --config webpack.config.js && http-server -c-1 -p 8080",
     "test": "nyc mocha \"./test/*\"",
-    "cucumber": "node ./node_modules/selenium-cucumber-js/index.js -b firefox -s ./features/step_definitions -x 50000",
+    "cucumber": "cucumber-js",
     "coverage": "nyc report --reporter=text-lcov > coverage.lcov && codecov",
     "build:web": "webpack --config webpack.config.js",
     "doc": "jsdoc -c jsdoc.json ./lib"
@@ -38,7 +38,7 @@
     "jsdoc": "^3.5.5",
     "minami": "^1.2.3",
     "nyc": "^13.3.0",
-    "webpack": "^4.23.1",
+    "webpack": "^4.29.6",
     "webpack-cli": "^3.1.2"
   },
   "dependencies": {
@@ -48,16 +48,16 @@
     "chai": "4.2.x",
     "chess.js": "github:jhlywa/chess.js#master",
     "date-fns": "^2.0.0-alpha.25",
+    "http-server": "^0.11.1",
     "inquirer": "^6.2.0",
     "mocha": "^5.2.0",
     "mocha-lcov-reporter": "^1.3.0",
     "n3": "^1.0.2",
     "prefix-ns": "^0.1.2",
     "q": "^1.5.1",
-    "selenium-cucumber-js": "^1.6.2",
-    "selenium-webdriver": "^4.0.0-alpha.1",
     "semantic-chess": "0.2.0",
     "solid-auth-client": "^2.2.10",
+    "solid-file-client": "^0.4.9",
     "standard": "*",
     "streamify-array": "^1.0.1",
     "uniqid": "^5.0.3",
