--- a/package.json
+++ b/package.json
@@ -43,13 +43,17 @@
   },
   "dependencies": {
     "@comunica/actor-init-sparql-rdfjs": "^1.6.5",
+    "@fortawesome/fontawesome-free": "^5.8.1",
     "@solid/cli": "^0.1.0",
     "@solid/query-ldflex": "^1.2.1",
+    "bootstrap": "^4.3.1",
     "chai": "4.2.x",
     "chess.js": "github:jhlywa/chess.js#master",
     "date-fns": "^2.0.0-alpha.25",
     "http-server": "^0.11.1",
     "inquirer": "^6.2.0",
+    "jquery": "^3.4.0",
+    "jquery.easing": "^1.4.1",
     "mocha": "^5.2.0",
     "mocha-lcov-reporter": "^1.3.0",
     "n3": "^1.0.2",
